// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <form
        class=""
        data-testid="form"
      >
        <div
          class="PicassoFormField-root"
          data-field-has-error="false"
        >
          <div
            class="base-Input base-Input base-Input relative text-black inline-flex gap-y gap-x items-center rounded-sm [font-size:_unset] cursor-[inherit] bg-white hover:[&_.resetButtonDirty]:visible p-2 h-8 w-[18.75rem] after:absolute after:top-0 after:bottom-0 after:right-0 after:left-0 after:inline-block after:content-[""] after:pointer-events after:cursor-default after:border after:border-solid after:border-gray after:rounded-sm [&:has(input:focus)]:after:shadow-[0_0_0_3px] [&:has(input:focus)]:after:shadow-blue [&:has(input:focus)]:after:border-blue hover:[&:not(:has(input:focus))]:after:border-gray"
          >
            <input
              autocomplete="none"
              class="base-Input w-full border-none outline-none cursor-[inherit] bg-transparent box-border h-full p-0 resize-none peer [&::placeholder]:text-gray [&::placeholder]:opacity-100 [&::-webkit-calendar-picker-indicator]:bg text-md leading-4"
              id="test"
              name="test"
              placeholder="test input"
              type="text"
              value=""
            />
          </div>
        </div>
        <button
          aria-disabled="false"
          class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
          data-component-type="button"
          role="button"
          tabindex="0"
          type="submit"
        >
          <span
            class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
          >
            Submit
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`Form renders with an error 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <form
        class=""
        data-testid="form"
      >
        <div
          class="PicassoFormField-root"
          data-field-has-error="true"
        >
          <div
            class="base-Input base- base-Input base-Input relative text-black inline-flex gap-y gap-x items-center rounded-sm [font-size:_unset] cursor-[inherit] bg-white hover:[&_.resetButtonDirty]:visible p-2 h-8 w-[18.75rem] after:absolute after:top-0 after:bottom-0 after:right-0 after:left-0 after:inline-block after:content-[""] after:pointer-events after:cursor-default after:border after:border-solid after:rounded-sm after:border-red [&:has(input:focus)]:after:border-red [&:has(input:focus)]:after:shadow-[0_0_0_3px] [&:has(input:focus)]:after:shadow-red"
          >
            <input
              aria-invalid="true"
              autocomplete="none"
              class="base-Input w-full border-none outline-none cursor-[inherit] bg-transparent box-border h-full p-0 resize-none peer [&::placeholder]:text-gray [&::placeholder]:opacity-100 [&::-webkit-calendar-picker-indicator]:bg text-md leading-4"
              id="test"
              name="test"
              placeholder="test input"
              type="text"
              value=""
            />
          </div>
          <div
            class=""
          >
            <div
              class="PicassoFormError-root PicassoFormField-error"
            >
              <p
                class="m-0 text-2xs text-red font-regular cursor-default"
              >
                Please complete this field.
              </p>
            </div>
          </div>
        </div>
        <button
          aria-disabled="false"
          class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-none [&+&]:ml-4 cursor-pointer no-underline rounded-sm shadow-none focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-within:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] border-none text-white visited:text-white hover:bg-[#4269D6] active:bg-[#1A41AB] bg-blue min-w h-8 py-0 px-4"
          data-component-type="button"
          role="button"
          tabindex="0"
          type="submit"
        >
          <span
            class="PicassoContainer-centerAlignItems PicassoContainer-flex PicassoContainer-inline font-semibold whitespace-nowrap text-button"
          >
            Submit
          </span>
        </button>
      </form>
    </div>
  </div>
</div>
`;
